Fix some FindBugs warnings
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc7.0.x/trunk@1175897 13f79535-47bb-0310-9956-ffa450edef68